<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bitsery</name>
  <version>0.0.1</version>
  <description>bitsery library as a ROS2 package</description>
  <maintainer email="jere@picknik.ai">Jere Liukkonen</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/jliukkonen/bitsery-ros</url>
  <url type="bugtracker">https://github.com/jliukkonen/bitsery-ros/issues</url>
  <author>Jere Liukkonen</author>
  <author email="jere@picknik.ai">Jere Liukkonen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>